<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sqlite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/apiEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/apihint" />

        <Button
            android:id="@+id/postbutton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/makepostbutton"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/google_plus_get_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getpostsbutton" />

        <ListView
            android:id="@+id/google_post_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>