<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moransposu.androidui.MainActivity"
    android:background="@color/colorTextRoseWhite"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="0dp"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/listViewHook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/list_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/listViewVert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/vert_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />


        <TextView
            android:id="@+id/gridViewHook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/grid_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/relViewHook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/relative_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/sqliteViewHook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sqlite_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/navViewHook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/nav_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/sqlnavHook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/sqlnav_view"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/httpoauth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/http_oauth"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/facebook_quick_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="13.31"
            android:background="@color/colorPrimaryDark"
            android:text="@string/fb_quick_post"
            android:textAlignment="center"
            android:textColor="@color/colorTextRoseWhite"
            android:textSize="36sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
