<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moransposu.androidui.List_Activity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num1"
            android:textAlignment="center"
            android:layout_margin="1dp"
            android:background="@color/colorFadedGrey"
            android:textColor="@color/colorTextRoseWhite"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num2"
            android:textAlignment="center"
            android:layout_margin="1dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorTextRoseWhite"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num3"
            android:textAlignment="center"
            android:layout_margin="1dp"
            android:background="@color/colorFadedGrey"
            android:textColor="@color/colorTextRoseWhite"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num4"
            android:textAlignment="center"
            android:layout_margin="1dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorTextRoseWhite"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num5"
            android:textAlignment="center"
            android:layout_margin="1dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextRoseWhite"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
